fix: [PL-27065]: label for template service (#11017)

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -730,6 +730,7 @@ module:
   templateService: TEMPLATESERVICE
   sto: STO
   governance: POLICY ENGINE
+templateServiceLabel: Template Service
 customPricing: for Custom Pricing
 specified: Specified
 byType: By Type
