feat: [CDS-41559]: Custom Deployment Template CRUD and listing (#10550)
* fix: add custom deployment in list + label colors

* feat: [CDS-41577]:  deployment context and deployment canvas added (#10612)

* fix: add custom deployment in list + label colors

* feat: [CDS-41577]: deployment canvas and deployment context added

* fix: [CDS-41577]: minor cleanup

Co-authored-by: Pratyush Garg <pratyush.garg@harness.io>

* fix: rebased to master

* fix: [CDS-41587]:  deploymentTemplate infrastructure tab integration (#10712)

* fix: [CDS-41587]:  deploymentTemplate infra tab changes

* fix: register formik methods on ref + icon added

* fix: added fields to deploymentContext + review comments addressed

* fix: disabled isEnabled

* fix: formik form debounced update

* fix: [CDS-41588]: Execution tab support (#10835)

* fix: [CDS-41588]: Execution tab support

* fix: [CDS-41588]: pr comments addressed

* fix: [CDS-41588]: minor changes

* fix: [CDS-41588]: refractored

* fix: [CDS-41588]: type introduced to fix template flows

* fix: [CDS-41588]: pr refactoring

Co-authored-by: Yogesh Chaudhary <yogesh.chaudhary@harness.io>

* feat: [CDS-41589]: variables form for deploymentTemplate + customVariableEditable to support description  (#10842)

* feat: [CDS-41589]: variables form for deploymentTemplate + customVariableEditable to support description + template label corrected on list view

* fix: css fixes for descripton enabled

* fix: customVariables omit description conditionally in processNodes

* fix: code fixes

* fix: description added on customVariablesPanel and readonly in infrastructure variables list

* fix: update fieldName to name in instanceAttributes

* fix: [CDS-41588]: Execution tab refactoring and yaml update (#10972)

* fix: [CDS-41588]: Execution tab refactoring

* fix: [CDS-41588]: jest fixed

* fix: [CDS-41582]: Support for showing template inputs added (#10999)

* fix: [CDS-41582]: Template 

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1343,3 +1343,16 @@ azureWebApp:
 skipInstances:
   title: 'Skip instances with the same artifact version already deployed'
 selectiveStageExecution: 'Selective stage execution'
+customDeployment:
+  infraVariablesTitle: 'Define the variables to be used in your environment and infrastructure.'
+  hostObjectArrayPath: 'Host Object Array Path'
+  hostAttributes: 'Host Attributes'
+  newAttribute: 'New Attribute'
+  fetchInstancesScript: 'Fetch Instance Script'
+  fetchInstanceScriptHeader: 'Define your script inline or from File Store.'
+  fieldNameLabel: 'Field Name'
+  jsonPathRelativeLabel: 'JSON Path (relative)'
+  fieldNamePlaceholder: 'Enter Field Name'
+  errors:
+    fetchScriptRequired: 'Fetch Instances Script is required'
+    fetchScriptBodyRequired: 'Fetch Instances Script body is required'
