feat: [SRM-11820] Update applicaiton tier on changing connector (#11106)
* feat: [SRM-11820] Update applicaiton tier on changing connector

* feat: [SRM-11820] Update applicaiton tier on changing connector

* feat: [SRM-11820]: added cypress for AppD Template

* feat: [SRM-11914]: No data screen in Datadog when no  query is added

* feat: [SRM-11954]: added no query selected screen and testcases

* feat: [SRM-11954]: added no query selected screen and testcases

* feat: [SRM-11954]: fixed failing cypress

* feat: [SRM-11820]: code refactor

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -331,6 +331,7 @@ monitoringSources:
       mappedMetrics: '{{metricCount}} metric(s) mapped to {{serviceCount}} service(s)'
       gcoMetrics: Google Cloud Operation metrics
   datadog:
+    noQueryAdded: 'Please add query manually or pick from dashboard'
     noMetricsWidgets: 'No metrics'
     manualInputQueryModal:
       modalTitle: 'Add your Datadog query'
