feat: [CCM-8841]: disable target port & target protocol for redirect config in case of AWS (#10973)

--- a/src/modules/75-ce/strings/strings.en.yaml
+++ b/src/modules/75-ce/strings/strings.en.yaml
@@ -24,6 +24,11 @@ common:
   hoverWarningHeader: 'WARNING {{message}}'
   interval: 'Interval'
   protocol: 'Protocol'
+  targetProtocol: 'Target Protocol'
+  targetPort: 'Target Port'
+  redirectUrl: 'Redirect url'
+  serverName: 'Server name'
+  pathMatch: 'Path match'
 allRegions: 'All Regions'
 allClusters: 'All Clusters'
 enforcementMessage:
