feat: [SRM-11408]: Elk Connector (#10922)
* feat: [SRM-11408]: Elk Connector

* feat: [SRM-11408]: Elk connector

* feat: [SRM-11408]: ELK Connector

* feat: [SRM-11819]: Elk Health Source also

* feat: [SRM-11408]: Elk Health Source also

* feat: [SRM-11408]: Unit Tests

* feat: [SRM-11408]: fix strings.em.yaml

* feat: [SRM-11408]: fixes

* feat: [SRM-11408]: fixes

* feat: [SRM-11408]: stringTypes.ts

* feat: [SRM-11408]: remove extra file

* feat:[SRM-11408]: remove extra files

* feat: [SRM-11408]: add deleted files

* feat: [SRM-11408]: fix test

* feat: [SRM-11408]: strings fixes

* feat: [SRM-11408]: strings fixes

* feat: [SRM-11408]: coverage

* feat: [SRM-11408]: coverage

* feat: [SRM-11408]: coverage

* feat: [SRM-11408]: code review comments

* feat: [SRM-11408]: add icon

* feat: [SRM-11408]: add icon

* feat: [SRM-11408]: eslint

* feat: [SRM-11408]: snapshot

* feat: [SRM-11408]: snapshot

* feat: [SRM-11408]: rebase

* feat: [SRM-11408]: fix coverage

* feat: [SRM-11408]: ElkAuthType

* feat: [SRM-11408]:eslint

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -344,6 +344,15 @@ newRelic:
   accountIdTooltip: For steps to get New Relic Account Id
   products:
     fullStackObservability: 'Full Stack Observability: APM'
+elk:
+  elkConnectorDetails: 'ELK Connector Details'
+  testConnectionStepValidation: 'Validating ELK authentication and permissions'
+  elkLabel: Elk
+  apiId: API ID
+  noAuthentication: No Authentication
+  validation:
+    apiKeyId: API ID is a required field
+    apiKeyRef: API KEY is a required field
 prometheus:
   urlValidation: Prometheus URL is required.
 datadog:
