feat: [PIE-5177]: add support for multi services (#11136)
* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

* feat: [PIE-5177]: update services

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1175,6 +1175,7 @@ serviceDeploymentTypes:
   awsLambda: AWS Lambda
   pcf: TAS
   ssh: Secure Shell
+  custom: Custom Deployment
   deployDifferentLabel: Deploy different service
   serverlessAwsLambda: Serverless Lambda
   serverlessAzureFunctions: Serverless Azure Functions
