--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -19,6 +19,8 @@ gnupgKeys: GnuPG Keys
 featureComingSoon: This feature is coming soon.
 skip: Skip
 sync: Sync
+selectService: Select Service
+selectServices: Select Services
 inputVariables: Input Variables
 confirmAction: Confirm action
 accountSetup: Account Setup
