feat: [CDS-43079]: add Config Files section into service tab when deployment type is ECS (#11154)
* fix: add Config Files section into service tab when deployment type is ECS

* fix: test cases

* feat: move checkbox fields inside spec object for ECS Rolling Deploy step

* feat: rename test case

* fix: test cases broke because of data re-structure

* fix: flaky test case issue

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -181,7 +181,7 @@ pipelineSteps:
     manifest:
       taskDefinition: Task Definition
       serviceDefinition: Service Definition
-      scallingPolicy: Scalling Policy
+      scalingPolicy: Scaling Policy
       scalableTarget: Scalable Target
     newServiceOverride: New configuration overrides
     multiServicesText: Deploy to multiple Services
