fix: [CDS-42770]: rename path to folderPath in yaml and labels in Azure Blueprint Step (#11085)
* fix: rename path to folderPath in yaml and labels

* fix: update fieldPath

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -475,6 +475,7 @@ azureBlueprint:
   assignmentNameError: Assignment Name Required
   configuration: Azure Blueprint Configuration
   managementGroup: Management Group
+  templateFolderPath: Template Folder Path
 validation:
   specifyFilter: Specify the filter condition
 welcomeMessage: Welcome to Harness
