feat: [SRM-11790]: Implemention of new SLOs listing page (#11127)
* feat: [SRM-11790]: initial layout for slos listing page

* feat: [SRM-11790]: initial layout for slos listing page

* feat: [SRM-11790]: backend api integration for new slos listing page

* feat: [SRM-11790]: adding icons for filters

* feat: [SRM-11790]: implementing icons and layout changes for new slo listing page

* feat: [SRM-11790]: fixing and adding unit testcases

* feat: [SRM-11790]: fixing and adding unit testcases

* feat: [SRM-11790]: fixing check failures

* feat: [SRM-11790]: fixing testcases

* feat: [SRM-11790]: fixing all cypress testcases

* feat: [SRM-11790]: adding tests for SLOActions component

* feat: [SRM-11790]: adding more fields in the slo listing table

* feat: [SRM-11790]: adding more tests

* feat: [SRM-11790]: adding more tests and refactoring

* feat: [SRM-11790]: adding more tests and refactoring

* feat: [SRM-11790]: adding more tests and refactoring

* feat: [SRM-11790]: fixing checks issues

* feat: [SRM-11790]: fixing checks issues

* feat: [SRM-11790]: refactoring and fixing the tests

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -691,6 +691,10 @@ templates:
 sensitivityValidation: Sensitivity should be high, medium or low
 slos:
   title: SLOs
+  monitoredService: MONITORED SERVICE
+  status: STATUS
+  target: TARGET
+  burnRate: BURN RATE/DAY
   deleteSLO: Delete SLO
   createSLO: Create SLO
   healthSource: Health source
