feat: [FFM-4407]: dropdown filters (#10975)
* feat: [FFM-4407]: dropdown filter, pagination pending

* feat: [FFM-4407]: hiding pagination when dropdown is showing only selected services

* feat: [FFM-4407]: add dropdown filter test, use jest reset mocks instead of clear mocks

* feat: [FFM-4407]: minor improvements

* feat: [FFM-4407]: skipped search-related unit tests

* feat: [FFM-4407]: dropdown strings added to strings file

* feat: [FFM-4407]: updated tests according to string file change

* feat: [FFM-4407]: pagination should only appear when dropdown shows Show Selected

* feat: [FFM-4407]: move toaster clear fn into specific test, removed unneeded assertion

* feat: [FFM-4407]: improved css of search bar

* feat: [FFM-4407]: WIP unit test (still failing)

* feat: [FFM-4407]: post rebase tidy up

* feat: [FFM-4407]: remove unneeded padding

* feat: [FFM-4407]: readded css removed during rebasing

* feat: [FFM-4407]: unit test update

* feat: [FFM-4407]: error mocked to null instead of false

* feat: [FFM-4407]: added type check, address pr comment

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -76,6 +76,7 @@ remove: Remove
 member: Member
 showMore: Show More
 showLess: Show Less
+showSelected: Show Selected
 hideAll: Hide All
 moreInfo: More Info
 moreOptions: More options
