feat: [CDS-41141]: Add  Azure Arm pipeline step (#10692)
* feat: [CDS-41141]: Add azure arm

* chore: add input step validation

* feat: change icon for step

* chore: add unit tests

* fix: update config options to new component

* fix: use name instead of id for mgmt group

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -526,4 +526,19 @@ deploymentSteps: Deployment Steps
 addStepsForYourDeploymentType: Add steps for your deployment type here
 removeStepTemplate: Remove Step Template
 removeStepTemplateConfirmationLabel: 'Are you sure you want to remove linked step template ?'
-removeStepTemplateSuccess: Step Template has been successfully removed
+removeStepTemplateSuccess: Step Template has been successfully remove
+azureArm:
+  description: Deploy resources using Azure Resource Manager (ARM).
+  location: Location
+  templateFile: ARM Template File
+  templateFileSource: '{{ $.cd.azureBlueprint.templateFileSource }}'
+  templateFileDetails: '{{ $.cd.azureBlueprint.templateFileDetails }}'
+  paramFileSource: Parameter File Source
+  specifyTemplateFile: Specify ARM Template File
+  specifyTemplateFileSource: Specify Template File Source
+  paramFile: ARM Parameter File
+  paramFilePath: Parameter File Path
+  specifyParameterFile: Specify ARM Parameter File
+  managementGroup: '{{ $.cd.azureBlueprint.managementGroup }}'
+  tenant: Tenant
+  required: '{{name}} is Required'
