feat: [CI-3951]: ci cypress utils (#10699)
* wip

* feat: [CI-3951]: run pipeline e2e

* feat: [CI-3951]: wip trigger

* feat: [CI-3951]: cypress utils reorganization

* feat: [CI-3951]: complete 6 ci cypress automation tests

* feat: [CI-3951]: cleanup

* feat: [CI-3951]: remove runPipelineStepTemplate for now

* feat: [CI-3951]: yaml dependency

* feat: [CI-3951]: reduce numOfPossibleRuntimeInputs and run all tests

* fix: [CI-3951]: fix broken tests

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "istanbul-lib-coverage": "^3.0.0",
     "nyc": "^15.1.0",
-    "source-map-support": "^0.5.20"
+    "source-map-support": "^0.5.20",
+    "yaml": "^1.10.0"
   }
 }
