fix: [CDS-41559]: style fixes + mini support added to connector field for variable section (#11173)
* fix: [CDS-41559]: style fixes + mini support added to connector field for variable section

* fix: snapshot updated

* fix: minor connector style fix

* fix: snapshots updated

* fix: connector allowed values added + style fixes for conector modal

* fix: comments addressed

* fix: snapshot updates

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1182,7 +1182,6 @@ serviceDeploymentTypes:
   awsLambda: AWS Lambda
   pcf: TAS
   ssh: Secure Shell
-  custom: Custom Deployment
   deployDifferentLabel: Deploy different service
   serverlessAwsLambda: Serverless Lambda
   serverlessAzureFunctions: Serverless Azure Functions
@@ -1190,6 +1189,7 @@ serviceDeploymentTypes:
   awsSAM: AWS SAM
   azureFunctions: Azure Functions
   azureWebApp: Azure Web Apps
+  customDeployment: Deployment Template
 noArtifactPaths: No artifact paths found with given Artifact Directory
 stageDataDeleteWarningTitle: Discard Stage Data
 serviceDataDeleteWarningTitle: Discard Service Data
@@ -1363,3 +1363,5 @@ customDeployment:
   errors:
     fetchScriptRequired: 'Fetch Instances Script is required'
     fetchScriptBodyRequired: 'Fetch Instances Script body is required'
+  validations:
+    nameUnique: Field Name should be unique
