fix: [CDS-41588]: ux improvements for deployment template crud (#11187)

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -523,10 +523,9 @@ miniKubeCmd2: sudo install minikube-linux-amd64 /usr/local/bin/minikube
 miniKubeCmd3: minikube start
 miniKubeCmd4: kubectl get pods -A
 deploymentSteps: Deployment Steps
-addStepsForYourDeploymentType: Add steps for your deployment type here
+addStepTemplatesForYourDeploymentType: Add step templates for your deployment type here
 removeStepTemplate: Remove Step Template
 removeStepTemplateConfirmationLabel: 'Are you sure you want to remove linked step template ?'
-removeStepTemplateSuccess: Step Template has been successfully remove
 azureArm:
   description: Deploy resources using Azure Resource Manager (ARM).
   location: Location
@@ -542,3 +541,6 @@ azureArm:
   managementGroup: '{{ $.cd.azureBlueprint.managementGroup }}'
   tenant: Tenant
   required: '{{name}} is Required'
+removeStepTemplateSuccess: Step Template has been successfully removed
+addStepTemplate: Add step template
+useStepTemplate: Use step template
