fix: [CDS-42886]: disable the version field when other fields are empty (#11211)
* fix: disable the version field when other fields are empty

* fix: GAR fixes

* fix: swagger services addeD

* fix: swagger services addeD

* fix: add new connector button function fixed

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -824,6 +824,7 @@ artifactsSelection:
   amazonS3Title: Amazon S3
   googleArtifactRegistryTitle: Google Artifact Registry
   githubPackageRegistryTitle: Github Package Registry
+  azureArtifactRegistryTitle: Azure Artifact Registry
   existingDocker:
     sidecarId: Sidecar Name
     sidecarIdPlaceholder: Enter Artifact Name
