feat: [CDS-43108]:skip-instances (#11238)
* feat: [CDS-43108]:skip-instances

* feat: [CDS-43108]:test-skip-instances

* feat: [CDS-43108]:test-skip-instances

* feat: [CDS-43108]:test-skip-instances

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1336,8 +1336,9 @@ phasesForm:
     rpm: 'Rpm'
     zip: 'Zip'
   packageTypesWinrm:
-    website: 'Website'
-    virtualDir: 'Virtual directory'
+    application: 'IIS Application'
+    website: 'IIS Website'
+    virtualDir: 'IIS Virtual directory'
 draft: 'Draft'
 duplicateStepIdentifiers: 'Duplicate identifiers found: {{duplicateIdString}}'
 alwaysEditModeYAML: Enable read/write mode always
