feat: [PIE-5371]: run pipeline form support for multi svc (#11243)

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -93,6 +93,7 @@ selectType: Select Type
 timeframe: Timeframe
 selectTimeFrame: Select Timeframe
 lastModified: 'Last Modified'
+servicePrefix: 'Service: {{ name }}'
 accountSetting:
   connector:
     loading: 'Loading settings...'
