feat: [PIE-4689]: execution list view menu (#11229)

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1286,6 +1286,7 @@ fieldPlaceholders:
 traffic: Traffic
 trafficPercentage: '{{$.pipeline.traffic}} %'
 viewPipeline: View Pipeline
+viewExecution: View Execution
 codeSource: 'Code Source'
 recentExecutions: 'Recent Executions'
 mostRecentDirection: 'Latest one on right side'
