feat: [CI-5326]: front end changes for hosted VMs and new infra design (#11252)
* feat: [CI-5326]: front end changes for hosted VMs and new infra design

* feat: [CI-5326]: fix PR comments

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -783,10 +783,16 @@ infraSpecifications:
   initTimeoutPlaceholder: Enter Init Timeout
   validation:
     requiredExistingStage: Existing stage is a required field
+  selectOs: Select the Operating System
   os: OS
   osTypes:
     windows: Windows
     macos: MacOS
+  selectArchitecture: Select the Architecture
+  architecture: Architecture
+  architectureTypes:
+    amd64: AMD64
+    arm64: ARM64
 imagePathLabel: Image Path
 artifactPathLabel: Artifact Path
 selectArtifactPathPlaceholder: Select or Enter an Artifact Path (Optional)
