feat: [CDS-43134]: add manifest and config file global overrides to RPF (#11198)
* feat: [CDS-43134]: add manifest overrides to RPF

* feat: [CDS-43134]: add config file overrides to RPF

* fix: rbac button for infra def

* fix: multi variables for service overrides

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -951,6 +951,7 @@ freezeWindows: Freeze Windows
 oAuthLabel: OAuth
 import: Import
 importEntityFromGit: Import {{resourceType}} From Git
+environmentOverrides: Environment Overrides
 serviceOverrides: Service Overrides
 invalidIdentifiers: 'Identifier must not be one of the following values: {{identifiers}}'
 repositoryFormat: Repository Format
