--- a/cypress/package.json
+++ b/cypress/package.json
@@ -11,17 +11,16 @@
     "dev:cypressCoverage": "NODE_ENV=development TARGET_LOCALHOST=false CYPRESS=true CYPRESS_COVERAGE=true BASE_URL=https://localhost:8080 NODE_OPTIONS=\"--max-old-space-size=6144\" webpack serve --progress --config configs/webpack.dev.js"
   },
   "dependencies": {
-    "@cypress/code-coverage": "^3.9.12",
+    "@cypress/code-coverage": "^3.10.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@testing-library/cypress": "^8.0.0",
-    "cypress": "~9.6.0",
-    "cypress-esbuild-preprocessor": "^1.0.2",
+    "@testing-library/cypress": "^8.0.3",
+    "cypress": "~10.8.0",
     "cypress-image-snapshot": "^4.0.1",
-    "esbuild": "^0.14.38",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "istanbul-lib-coverage": "^3.0.0",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.20",
+    "wait-on": "^6.0.1",
     "yaml": "^1.10.0"
   }
 }
