feat: [SRM-12081]: implementing demo feedback , fixing issues and enhancements for SLOs Listing Page (#11310)
* feat: [SRM-12081]: demo feedback , fixing issues and enhancements

* feat: [SRM-12081]: demo feedback , fixing issues and enhancements

* feat: [SRM-12081]: updating snapshots

* feat: [SRM-12081]: updating snapshots

* feat: [SRM-12081]: updating snapshots

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -691,6 +691,8 @@ templates:
 sensitivityValidation: Sensitivity should be high, medium or low
 slos:
   title: SLOs
+  subTitle: Review the status and error budget of all your defined service level objectives
+  completeTitle: Service Level Objectives (SLOs)
   monitoredService: MONITORED SERVICE
   status: STATUS
   target: TARGET
