fix: [FFM-4408]: Validating Your Flag Implementaion (#10918)
* fix: [FFM-4408]: Task FFM-4411, Updating Validating Your Flag View and removing redundant components

* fix: [FFM-4408]: Validating flag functionality

* fix: [FFM-4408]: Refactor loading method

* fix: [FFM-4408]: Validating Your Flag functionality and improvements

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -860,6 +860,7 @@ scope: '{{ $.delegate.Scope }}'
 community: Community
 resourceCenter:
   title: 'RESOURCE CENTER'
+  link: 'contact our support'
   productUpdates:
     title: Product Updates
     whatsnew: 'What’s New'
