feat: [cds-43301]: host connection type added (#11273)
* fix: [cds-42875]: test connection issue

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -375,7 +375,7 @@ infrastructure:
   sshWinRmAzure:
     cloudProvider: Cloud Provider
     hostConnectionAttributes: Host Connection Attributes
-    usePublicDns: Use Public DNS connection
+    hostConnectionType: Host Connection Type
     noTagsAzure: No Tags found with given Connector and Subscription Id
 cloudFormation:
   createDescription: Provision resources using a CloudFormation template.
