feat: [CDS-42951]: implement ECS blue green steps (#11174)
* feat: ECSBlueGreenCreateService step WIP

* feat: implement ECSBlueGreenSwapTargetGroups and ECSBlueGreenRollback steps

* fix: add test cases for EcsBlueGreenSwapTargetGroups and EcsBlueGreenRollbackStep steps

* feat: add all remaining fields in ECS BG Create Service step with static options

* fix: snapshot

* chore: add comments explaining API call changes which are temporary

* fix: add validaton to other than common fields in ECSBlueGreenCreateServiceStep

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -93,6 +93,15 @@ steps:
       hostName: Host Name Convention
       vpcs: VPCs
       loadBalancer: Load  Balancer
+  ecsBGCreateServiceStep:
+    sectionHeaders:
+      configureProductionService: Configure your Production Service
+      configureStageService: Configure your Stage Service
+    labels:
+      prodListener: Prod Listener
+      prodListenerRuleARN: Prod Listener Rule ARN
+      stageListener: Stage Listener
+      stageListenerRuleARN: Stage Listener Rule ARN
 filePathPlaceholder: 'Enter path within manifest folder'
 resourceCannotBeEmpty: 'Resource cannot be empty'
 manifestPathsCannotBeEmpty: 'Manifest Paths cannot be empty'
