fix: [cds-41492]: caching repository list call in artifctory (#11354)
* fix: caching repository list call in artifctory

* fix: artifactory artifact changes

* fix: snapshot updated

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -795,6 +795,7 @@ infraSpecifications:
     arm64: ARM64
 imagePathLabel: Image Path
 artifactPathLabel: Artifact Path
+artifactImagePathLabel: Artifact/Image Path
 selectArtifactPathPlaceholder: Select or Enter an Artifact Path (Optional)
 artifactPathFilterLabel: Artifact Path Filter
 artifactsSelection:
