fix: [CDS-42730]: Pipeline studio linking changes (#11424)
* fix: [CDS-42730]: Pipeline studio linking changes

* fix: [CDS-42730]: Template change bugfix and propagate fix

* fix: default fetchInstance step added

* fix: [CDS-42730]: infra bug fixed

* fix: [CDS-42730]: PR refactoring and other changes

Co-authored-by: Pratyush Garg <pratyush.garg@harness.io>

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1016,6 +1016,7 @@ stepDescription:
   ServerlessLambdaRollback: Deploy the previous successful version as a new version.
   createPR: Create PR
   mergePR: Merge PR
+  fetchInstanceScript: Fetch Instances
   AzureSlotDeployment: Select the Web App and source and target deployment slots for the deployment.
   CustomApproval: Custom Approval
   AzureTrafficShift: Shift network traffic to the new Web App version in the deployment slot.
